Refactor Dockerfiles to improve Poetry virtual environment management and execution.

--- a/Dockerfile.rootless
+++ b/Dockerfile.rootless
@@ -10,14 +10,19 @@ RUN addgroup -g 1000 app && adduser -D -u 1000 -G app app
 
 WORKDIR /app
 
+RUN apk add --no-cache gcc python3-dev musl-dev linux-headers
+
 RUN pip install poetry
+ENV POETRY_VIRTUALENVS_IN_PROJECT=true
 
 COPY pyproject.toml poetry.lock* ./
 COPY README.md ./
 COPY rns_page_node ./rns_page_node
 
-RUN poetry install --no-root --no-interaction --no-ansi
+RUN poetry install --no-interaction --no-ansi
+
+ENV PATH="/app/.venv/bin:$PATH"
 
 USER app
 
-ENTRYPOINT ["rns-page-node"]
+ENTRYPOINT ["poetry", "run", "rns-page-node"]
