--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,7 +1,7 @@
 FROM python:3.13-alpine AS builder
 
 RUN apk update
-RUN apk add  build-base libffi-dev cargo pkgconfig
+RUN apk add --no-cache build-base libffi-dev cargo pkgconfig gcc python3-dev musl-dev linux-headers
 
 WORKDIR /src
 
