--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,14 @@ requires-python = ">=3.9"
 dependencies = [
     "rns (>=1.0.4,<1.5.0)"
 ]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Operating System :: OS Independent",
+]
+
+[project.urls]
+Homepage = "https://github.com/Sudo-Ivan/rns-page-node"
+Repository = "https://github.com/Sudo-Ivan/rns-page-node"
 
 [project.scripts]
 rns-page-node = "rns_page_node.main:main"
